--- a/tensorflow/Untitled.ipynb
+++ b/tensorflow/Untitled.ipynb
@@ -6,103 +6,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 텐서보드를 이용하기 위해 각종 변수들을 설정하고 저장하는 방법을 익혀봅니다.\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "import numpy as np"
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-f6adb64701aa>, line 58)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-f6adb64701aa>\"\u001b[1;36m, line \u001b[1;32m58\u001b[0m\n\u001b[1;33m    https://www.microsoft.com/en-us/download/details.aspx?id=53587\"\"\";)\u001b[0m\n\u001b[1;37m                                                                       \n^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "data = np.loadtxt('./data.csv', delimiter=',',\n",
-    "                  unpack=True, dtype='float32')\n",
-    "\n",
-    "x_data = np.transpose(data[0:2])\n",
-    "y_data = np.transpose(data[2:])\n",
-    "\n",
-    "\n",
-    "#########\n",
-    "# 신경망 모델 구성\n",
-    "######\n",
-    "global_step = tf.Variable(0, trainable=False, name='global_step')\n",
-    "\n",
-    "X = tf.placeholder(tf.float32)\n",
-    "Y = tf.placeholder(tf.float32)\n",
-    "\n",
-    "# with tf.name_scope 으로 묶은 블럭은 텐서보드에서 한 레이어안에 표현해줍니다\n",
-    "with tf.name_scope('layer1'):\n",
-    "    W1 = tf.Variable(tf.random_uniform([2, 10], -1., 1.), name='W1')\n",
-    "    L1 = tf.nn.relu(tf.matmul(X, W1))\n",
-    "\n",
-    "with tf.name_scope('layer2'):\n",
-    "    W2 = tf.Variable(tf.random_uniform([10, 20], -1., 1.), name='W2')\n",
-    "    L2 = tf.nn.relu(tf.matmul(L1, W2))\n",
-    "\n",
-    "with tf.name_scope('output'):\n",
-    "    W3 = tf.Variable(tf.random_uniform([20, 3], -1., 1.), name='W3')\n",
-    "    model = tf.matmul(L2, W3)\n",
-    "\n",
-    "with tf.name_scope('optimizer'):\n",
-    "    cost = tf.reduce_mean(\n",
-    "        tf.nn.softmax_cross_entropy_with_logits(labels=Y, logits=model))\n",
-    "\n",
-    "    optimizer = tf.train.AdamOptimizer(learning_rate=0.01)\n",
-    "    train_op = optimizer.minimize(cost, global_step=global_step)\n",
-    "\n",
-    "    # tf.summary.scalar 를 이용해 수집하고 싶은 값들을 지정할 수 있습니다.\n",
-    "    tf.summary.scalar('cost', cost)\n",
-    "\n",
-    "\n",
-    "#########\n",
-    "# 신경망 모델 학습\n",
-    "######\n",
-    "sess = tf.Session()\n",
-    "saver = tf.train.Saver(tf.global_variables())\n",
-    "\n",
-    "ckpt = tf.train.get_checkpoint_state('./mymodel')\n",
-    "if ckpt and tf.train.checkpoint_exists(ckpt.model_checkpoint_path):\n",
-    "    saver.restore(sess, ckpt.model_checkpoint_path)\n",
-    "else:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "\n",
-    "# 텐서보드에서 표시해주기 위한 텐서들을 수집합니다.\n",
-    "merged = tf.summary.merge_all()\n",
-    "# 저장할 그래프와 텐서값들을 저장할 디렉토리를 설정합니다.\n",
-    "writer = tf.summary.FileWriter('./logs', sess.graph)\n",
-    "# 이렇게 저장한 로그는, 학습 후 다음의 명령어를 이용해 웹서버를 실행시킨 뒤\n",
-    "# tensorboard --logdir=./logs\n",
-    "# 다음 주소와 웹브라우저를 이용해 텐서보드에서 확인할 수 있습니다.\n",
-    "# http://localhost:6006\n",
-    "\n",
-    "# 최적화 진행\n",
-    "for step in range(100):\n",
-    "    sess.run(train_op, feed_dict={X: x_data, Y: y_data})\n",
-    "\n",
-    "    print('Step: %d, ' % sess.run(global_step),\n",
-    "          'Cost: %.3f' % sess.run(cost, feed_dict={X: x_data, Y: y_data}))\n",
-    "\n",
-    "    # 적절한 시점에 저장할 값들을 수집하고 저장합니다.\n",
-    "    summary = sess.run(merged, feed_dict={X: x_data, Y: y_data})\n",
-    "    writer.add_summary(summary, global_step=sess.run(global_step))\n",
-    "\n",
-    "saver.save(sess, './model/dnn.ckpt', global_step=global_step)\n",
-    "\n",
-    "#########\n",
-    "# 결과 확인\n",
-    "# 0: 기타 1: 포유류, 2: 조류\n",
-    "######\n",
-    "prediction = tf.argmax(model, 1)\n",
-    "target = tf.argmax(Y, 1)\n",
-    "print('예측값:', sess.run(prediction, feed_dict={X: x_data}))\n",
-    "print('실제값:', sess.run(target, feed_dict={Y: y_data}))\n",
-    "\n",
-    "is_correct = tf.equal(prediction, target)\n",
-    "accuracy = tf.reduce_mean(tf.cast(is_correct, tf.float32))\n",
-    "print('정확도: %.2f' % sess.run(accuracy * 100, feed_dict={X: x_data, Y: y_data}))"
+    "# Copyright 2015 The TensorFlow Authors. All Rights Reserved.\n",
+    "#\n",
+    "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+    "# you may not use this file except in compliance with the License.\n",
+    "# You may obtain a copy of the License at\n",
+    "#\n",
+    "#     http://www.apache.org/licenses/LICENSE-2.0\n",
+    "#\n",
+    "# Unless required by applicable law or agreed to in writing, software\n",
+    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+    "# See the License for the specific language governing permissions and\n",
+    "# limitations under the License.\n",
+    "# ==============================================================================\n",
+    "\"\"\"A script for testing that TensorFlow is installed correctly on Windows.\n",
+    "The script will attempt to verify your TensorFlow installation, and print\n",
+    "suggestions for how to fix your installation.\n",
+    "\"\"\"\n",
+    "import ctypes\n",
+    "import imp\n",
+    "import sys\n",
+    "def main():\n",
+    "  try:\n",
+    "    import tensorflow as tf\n",
+    "    print(\"TensorFlow successfully installed.\")\n",
+    "    if tf.test.is_built_with_cuda():\n",
+    "      print(\"The installed version of TensorFlow includes GPU support.\")\n",
+    "    else:\n",
+    "      print(\"The installed version of TensorFlow does not include GPU support.\")\n",
+    "    sys.exit(0)\n",
+    "  except ImportError:\n",
+    "    print(\"ERROR: Failed to import the TensorFlow module.\")\n",
+    "  candidate_explanation = False\n",
+    "  python_version = sys.version_info.major, sys.version_info.minor\n",
+    "  print(\"\\n- Python version is %d.%d.\" % python_version)\n",
+    "  if not (python_version == (3, 5) or python_version == (3, 6)):\n",
+    "    candidate_explanation = True\n",
+    "    print(\"- The official distribution of TensorFlow for Windows requires \"\n",
+    "          \"Python version 3.5 or 3.6.\")\n",
+    "  \n",
+    "  try:\n",
+    "    _, pathname, _ = imp.find_module(\"tensorflow\")\n",
+    "    print(\"\\n- TensorFlow is installed at: %s\" % pathname)\n",
+    "  except ImportError:\n",
+    "    candidate_explanation = False\n",
+    "    print(\"\"\"\n",
+    "- No module named TensorFlow is installed in this Python environment. You may\n",
+    "  install it using the command `pip install tensorflow`.\"\"\")\n",
+    "  try:\n",
+    "    msvcp140 = ctypes.WinDLL(\"msvcp140.dll\")\n",
+    "  except OSError:\n",
+    "    candidate_explanation = True\n",
+    "    print(\"\"\"\n",
+    "- Could not load 'msvcp140.dll'. TensorFlow requires that this DLL be\n",
+    "  installed in a directory that is named in your %PATH% environment\n",
+    "  variable. You may install this DLL by downloading Microsoft Visual\n",
+    "  C++ 2015 Redistributable Update 3 from this URL:\n",
+    "https://www.microsoft.com/en-us/download/details.aspx?id=53587\"\"\";)\n",
+    "  try:\n",
+    "    cudart64_80 = ctypes.WinDLL(\"cudart64_80.dll\")\n",
+    "  except OSError:\n",
+    "    candidate_explanation = True\n",
+    "    print(\"\"\"\n",
+    "- Could not load 'cudart64_80.dll'. The GPU version of TensorFlow\n",
+    "  requires that this DLL be installed in a directory that is named in\n",
+    "  your %PATH% environment variable. Download and install CUDA 8.0 from\n",
+    "  this URL: https://developer.nvidia.com/cuda-toolkit\"\"\";)\n",
+    "  try:\n",
+    "    nvcuda = ctypes.WinDLL(\"nvcuda.dll\")\n",
+    "  except OSError:\n",
+    "    candidate_explanation = True\n",
+    "    print(\"\"\"\n",
+    "- Could not load 'nvcuda.dll'. The GPU version of TensorFlow requires that\n",
+    "  this DLL be installed in a directory that is named in your %PATH%\n",
+    "  environment variable. Typically it is installed in 'C:\\Windows\\System32'.\n",
+    "  If it is not present, ensure that you have a CUDA-capable GPU with the\n",
+    "  correct driver installed.\"\"\")\n",
+    "  cudnn5_found = False\n",
+    "  try:\n",
+    "    cudnn5 = ctypes.WinDLL(\"cudnn64_5.dll\")\n",
+    "    cudnn5_found = True\n",
+    "  except OSError:\n",
+    "    candidate_explanation = True\n",
+    "    print(\"\"\"\n",
+    "- Could not load 'cudnn64_5.dll'. The GPU version of TensorFlow\n",
+    "  requires that this DLL be installed in a directory that is named in\n",
+    "  your %PATH% environment variable. Note that installing cuDNN is a\n",
+    "  separate step from installing CUDA, and it is often found in a\n",
+    "  different directory from the CUDA DLLs. You may install the\n",
+    "  necessary DLL by downloading cuDNN 5.1 from this URL:\n",
+    "https://developer.nvidia.com/cudnn\"\"\";)\n",
+    "  cudnn6_found = False\n",
+    "  try:\n",
+    "    cudnn = ctypes.WinDLL(\"cudnn64_6.dll\")\n",
+    "    cudnn6_found = True\n",
+    "  except OSError:\n",
+    "    candidate_explanation = True\n",
+    "  if not cudnn5_found or not cudnn6_found:\n",
+    "    print()\n",
+    "    if not cudnn5_found and not cudnn6_found:\n",
+    "      print(\"- Could not find cuDNN.\")\n",
+    "    elif not cudnn5_found:\n",
+    "      print(\"- Could not find cuDNN 5.1.\")\n",
+    "    else:\n",
+    "      print(\"- Could not find cuDNN 6.\")\n",
+    "      print(\"\"\"\n",
+    "  The GPU version of TensorFlow requires that the correct cuDNN DLL be installed\n",
+    "  in a directory that is named in your %PATH% environment variable. Note that\n",
+    "  installing cuDNN is a separate step from installing CUDA, and it is often\n",
+    "  found in a different directory from the CUDA DLLs. The correct version of\n",
+    "  cuDNN depends on your version of TensorFlow:\n",
+    "  \n",
+    "  * TensorFlow 1.2.1 or earlier requires cuDNN 5.1. ('cudnn64_5.dll')\n",
+    "  * TensorFlow 1.3 or later requires cuDNN 6. ('cudnn64_6.dll')\n",
+    "    \n",
+    "  You may install the necessary DLL by downloading cuDNN from this URL:\n",
+    "https://developer.nvidia.com/cudnn\"\"\";)\n",
+    "    \n",
+    "  if not candidate_explanation:\n",
+    "    print(\"\"\"\n",
+    "- All required DLLs appear to be present. Please open an issue on the\n",
+    "  TensorFlow GitHub page: https://github.com/tensorflow/tensorflow/issues\"\"\";)\n",
+    "  sys.exit(-1)\n",
+    "if __name__ == \"__main__\":\n",
+    "  main()\n"
    ]
   },
   {
